tests/generic.m31.ref
Constant A is declared.
Constant B is declared.

Constant eq is declared.

x₀ : A
⊢ x₀ : A

Successfully failed command with runtime error:
File "./generic.m31", line 10 character 6 - line 12 character 5:
no match found for
⊢ A : Type

Constant a is declared.

⊢ a : A

