tests/generic.m31

constant A B : Type
constant eq : A == B
now betas = add_beta eq

do match assume x : A in x : B with
  |- _atom ?y => y
  end

fail match A with
  |- _atom _ => ()
  end

constant a : A
do match a : B with
  |- _constant ?y => y
end

